--- a/pracitce/animation.css
+++ b/pracitce/animation.css
@@ -20,14 +20,16 @@ h1 {
   position: absolute;
   top: 80px;
   left: 430px;
-  animation: slide 2s;
+  animation: slide 2s ease-out;
 }
 
 @keyframes slide {
   from {
     left: -100px;
+    opacity: 0;
   }
   to {
     left: 430px;
+    opacity: 1;
   }
 }
