--- a/pracitce/animation.css
+++ b/pracitce/animation.css
@@ -33,3 +33,14 @@ h1 {
     opacity: 1;
   }
 }
+
+@keyframes disappear {
+  from {
+    left: 430px;
+    opacity: 1;
+  }
+  to {
+    left: -100px;
+    opacity: 0;
+  }
+}
